# mattock

./: .gitignore  LICENSE  Readme.md  pyproject.toml
mattock/: __main__.py  account.py  files.py  group.py  record.py  uv_file_info.py
mattock/tests/: clean.py  setup.py  setup.sh  test_data.py  test_mattock.py
